--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -31,6 +31,14 @@
         <servlet-name>XmlServlet</servlet-name>
         <servlet-class>com.sunflower.report.XmlServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RequestServlet</servlet-name>
+        <servlet-class>com.sunflower.web.RequestServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LocationServlet</servlet-name>
+        <servlet-class>com.sunflower.web.LocationServlet</servlet-class>
+    </servlet>
 
 
 
@@ -61,5 +69,13 @@
     <servlet-mapping>
         <servlet-name>XmlServlet</servlet-name>
         <url-pattern>/xmlxprt</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RequestServlet</servlet-name>
+        <url-pattern>/request</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LocationServlet</servlet-name>
+        <url-pattern>/location</url-pattern>
     </servlet-mapping>
 </web-app>
