--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -31,7 +31,10 @@
         <servlet-name>XmlServlet</servlet-name>
         <servlet-class>com.sunflower.report.XmlServlet</servlet-class>
     </servlet>
-
+    <servlet>
+        <servlet-name>UserInstanceServlet</servlet-name>
+        <servlet-class>com.sunflower.web.UserInstanceServlet</servlet-class>
+    </servlet>
 
 
     <servlet-mapping>
@@ -61,5 +64,9 @@
     <servlet-mapping>
         <servlet-name>XmlServlet</servlet-name>
         <url-pattern>/xmlxprt</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserInstanceServlet</servlet-name>
+        <url-pattern>/user_si</url-pattern>
     </servlet-mapping>
 </web-app>
