--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -47,6 +47,10 @@
         <servlet-name>ContactUsServlet</servlet-name>
         <servlet-class>com.sunflower.web.ContactUsServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegisterEmployeeServlet</servlet-name>
+        <servlet-class>com.sunflower.web.RegisterEmployeeServlet</servlet-class>
+    </servlet>
 
 
 
@@ -94,6 +98,18 @@
         <servlet-name>ContactUsServlet</servlet-name>
         <url-pattern>/contuctus</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegisterEmployeeServlet</servlet-name>
+        <url-pattern>/reg_emp</url-pattern>
+    </servlet-mapping>
+
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/User</ejb-ref-name>
+        <ejb-ref-type>Entity</ejb-ref-type>
+        <local-home>com.sunflower.ejb.user.LocalUserHome</local-home>
+        <local>com.sunflower.ejb.user.LocalUser</local>
+        <ejb-link>UserEJB</ejb-link>
+    </ejb-local-ref>
 
 
 </web-app>
