--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -110,6 +110,13 @@
         <local>com.sunflower.ejb.user.LocalUser</local>
         <ejb-link>UserEJB</ejb-link>
     </ejb-local-ref>
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/Task</ejb-ref-name>
+        <ejb-ref-type>Entity</ejb-ref-type>
+        <local-home>com.sunflower.ejb.task.LocalTaskHome</local-home>
+        <local>com.sunflower.ejb.task.LocalTask</local>
+        <ejb-link>TaskEJB</ejb-link>
+    </ejb-local-ref>
 
 
 </web-app>
