--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -51,6 +51,14 @@
         <servlet-name>RegisterEmployeeServlet</servlet-name>
         <servlet-class>com.sunflower.web.RegisterEmployeeServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>TestServlet</servlet-name>
+        <servlet-class>com.sunflower.web.TestServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ExitServlet</servlet-name>
+        <servlet-class>com.sunflower.web.ExitServlet</servlet-class>
+    </servlet>
 
 
 
@@ -102,6 +110,14 @@
         <servlet-name>RegisterEmployeeServlet</servlet-name>
         <url-pattern>/reg_emp</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ExitServlet</servlet-name>
+        <url-pattern>/exit</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TestServlet</servlet-name>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
 
     <ejb-local-ref>
         <ejb-ref-name>ejb/User</ejb-ref-name>
@@ -116,6 +132,13 @@
         <local-home>com.sunflower.ejb.task.LocalTaskHome</local-home>
         <local>com.sunflower.ejb.task.LocalTask</local>
         <ejb-link>TaskEJB</ejb-link>
+    </ejb-local-ref>
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/ServiceLocation</ejb-ref-name>
+        <ejb-ref-type>Entity</ejb-ref-type>
+        <local-home>com.sunflower.ejb.servicelocation.LocalServiceLocationHome</local-home>
+        <local>com.sunflower.ejb.servicelocation.LocalServiceLocation</local>
+        <ejb-link>ServiceLocationEJB</ejb-link>
     </ejb-local-ref>
 
 
