--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -44,6 +44,10 @@
         <servlet-class>com.sunflower.web.UserInstanceServlet</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>UserGroupServlet</servlet-name>
+        <servlet-class>com.sunflower.web.UserGroupServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>ContactUsServlet</servlet-name>
         <servlet-class>com.sunflower.web.ContactUsServlet</servlet-class>
     </servlet>
@@ -87,6 +91,10 @@
         <url-pattern>/user_si</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>UserGroupServlet</servlet-name>
+        <url-pattern>/usergroup</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>RequestServlet</servlet-name>
         <url-pattern>/request</url-pattern>
     </servlet-mapping>
@@ -110,6 +118,7 @@
         <local>com.sunflower.ejb.user.LocalUser</local>
         <ejb-link>UserEJB</ejb-link>
     </ejb-local-ref>
+
     <ejb-local-ref>
         <ejb-ref-name>ejb/Task</ejb-ref-name>
         <ejb-ref-type>Entity</ejb-ref-type>
@@ -118,5 +127,12 @@
         <ejb-link>TaskEJB</ejb-link>
     </ejb-local-ref>
 
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/UserGroup</ejb-ref-name>
+        <ejb-ref-type>Entity</ejb-ref-type>
+        <local-home>com.sunflower.ejb.usergroup.LocalUserGroupHome</local-home>
+        <local>com.sunflower.ejb.usergroup.LocalUserGroup</local>
+        <ejb-link>UserGroupEJB</ejb-link>
+    </ejb-local-ref>
 
 </web-app>
