#10 Added Service bean, added Price bean, updated order functionality

--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -191,9 +191,25 @@
     <ejb-local-ref>
         <ejb-ref-name>ejb/ProviderLocation</ejb-ref-name>
         <ejb-ref-type>Entity</ejb-ref-type>
-        <local-home>com.sunflower.ejb.ProviderLocation.ProviderLocationHome</local-home>
+        <local-home>com.sunflower.ejb.ProviderLocation.LocalProviderLocationHome</local-home>
         <local>com.sunflower.ejb.ProviderLocation.LocalProviderLocation</local>
         <ejb-link>ProviderLocationEJB</ejb-link>
+    </ejb-local-ref>
+
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/Price</ejb-ref-name>
+        <ejb-ref-type>Entity</ejb-ref-type>
+        <local-home>com.sunflower.ejb.price.LocalPriceHome</local-home>
+        <local>com.sunflower.ejb.price.LocalPrice</local>
+        <ejb-link>PriceEJB</ejb-link>
+    </ejb-local-ref>
+
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/Service</ejb-ref-name>
+        <ejb-ref-type>Entity</ejb-ref-type>
+        <local-home>com.sunflower.ejb.service.LocalServiceHome</local-home>
+        <local>com.sunflower.ejb.service.LocalService</local>
+        <ejb-link>ServiceEJB</ejb-link>
     </ejb-local-ref>
 
 </web-app>
