--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -75,7 +75,10 @@
         <servlet-name>UserSO</servlet-name>
         <jsp-file>userSO.jsp</jsp-file>
     </servlet>
-
+    <servlet>
+        <servlet-name>TaskServlet</servlet-name>
+        <servlet-class>com.sunflower.web.TaskServlet</servlet-class>
+    </servlet>
 
 
     <servlet-mapping>
@@ -150,7 +153,11 @@
         <servlet-name>UserSO</servlet-name>
         <url-pattern>/user_so</url-pattern>
     </servlet-mapping>
-
+    <servlet-mapping>
+        <servlet-name>TaskServlet</servlet-name>
+        <url-pattern>/task</url-pattern>
+    </servlet-mapping>
+    
     <ejb-local-ref>
         <ejb-ref-name>ejb/User</ejb-ref-name>
         <ejb-ref-type>Entity</ejb-ref-type>
