--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -100,8 +100,16 @@
         <servlet-name>UserInfoServlet</servlet-name>
         <servlet-class>com.sunflower.web.UserInfoServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CatalogServlet</servlet-name>
+        <servlet-class>com.sunflower.web.CatalogServlet</servlet-class>
+    </servlet>
 
 
+    <servlet-mapping>
+        <servlet-name>CatalogServlet</servlet-name>
+        <url-pattern>/catalog</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CheckLoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
