--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -110,7 +110,11 @@
     </servlet>
      <servlet>
         <servlet-name>CreateDCServlet</servlet-name>
-        <servlet-class>com.sunflower.web.CreateDCServlet</servlet-class>
+        <servlet-class>com.sunflower.web.CreateDC</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CancelOrderServlet</servlet-name>
+        <servlet-class>com.sunflower.system.CancelOrderServlet</servlet-class>
     </servlet>
 
      <servlet-mapping>
@@ -220,6 +224,10 @@
     <servlet-mapping>
         <servlet-name>CreateDCServlet</servlet-name>
         <url-pattern>/CreateDC</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CancelOrderServlet</servlet-name>
+        <url-pattern>/cancelOrder</url-pattern>
     </servlet-mapping>
     
     <ejb-local-ref>
