--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -4,6 +4,15 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <servlet>
+        <servlet-name>Log4JInitServlet</servlet-name>
+        <servlet-class>com.sunflower.system.Log4JInitServlet</servlet-class>
+        <init-param>
+            <param-name>log4j-properties-location</param-name>
+            <param-value>WEB-INF/log4j.properties</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
         <servlet-name>CheckLoginServlet</servlet-name>
         <servlet-class>com.sunflower.web.CheckLoginServlet</servlet-class>
     </servlet>
@@ -228,6 +237,10 @@
     <servlet-mapping>
         <servlet-name>CancelOrderServlet</servlet-name>
         <url-pattern>/cancelOrder</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Log4JInitServlet</servlet-name>
+        <url-pattern>/init</url-pattern>
     </servlet-mapping>
     
     <ejb-local-ref>
