--- a/web/web/WEB-INF/web.xml
+++ b/web/web/WEB-INF/web.xml
@@ -14,6 +14,10 @@
     <filter-mapping>
         <filter-name>CustomerFilter</filter-name>
         <url-pattern>/order</url-pattern>
+        <url-pattern>/generateservices</url-pattern>
+        <url-pattern>/change_info</url-pattern>
+        <url-pattern>/cancelOrder</url-pattern>
+        <url-pattern>/proceedorder</url-pattern>
     </filter-mapping>
 
     <filter>
@@ -53,6 +57,9 @@
         <url-pattern>/tasks</url-pattern>
         <url-pattern>/getTask</url-pattern>
         <url-pattern>/assign</url-pattern>
+        <url-pattern>/task_ie</url-pattern>
+        <url-pattern>/task_pe</url-pattern>
+        <url-pattern>/CreateDC</url-pattern>
     </filter-mapping>
 
     <filter>
@@ -92,16 +99,25 @@
 
     </filter-mapping>
 
+    <filter>
+        <filter-name>GuestFilter</filter-name>
+        <filter-class>
+            com.sunflower.filters.GuestFilter
+        </filter-class>
+
+    </filter>
+    <filter-mapping>
+        <filter-name>GuestFilter</filter-name>
+        <url-pattern>/login</url-pattern>
+        <url-pattern>/signup</url-pattern>
+    </filter-mapping>
+
 
 
 
     <servlet>
         <servlet-name>CheckLoginServlet</servlet-name>
         <servlet-class>com.sunflower.web.CheckLoginServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>CompleteServlet</servlet-name>
-        <servlet-class>com.sunflower.web.CompleteServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>SignUpServlet</servlet-name>
@@ -265,10 +281,6 @@
     <servlet-mapping>
         <servlet-name>CheckLoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>CompleteServlet</servlet-name>
-        <url-pattern>/complete</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SignUpServlet</servlet-name>
